--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "php": "~7.0",
         "guzzlehttp/guzzle": "6.3.0",
-        "swiftmailer/swiftmailer": "4.1.7"
+        "swiftmailer/swiftmailer": "4.1.7",
+        "upwork/php-upwork": "v1.2.4"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=5.4.3",
